add amplitude attempt

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/kissing.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sudachi - Learn Japanese</title>
+    <script src="https://cdn.amplitude.com/libs/analytics-browser-2.11.1-min.js.gz"></script><script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.8.0-min.js.gz"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('5ec6cb519e6f7e1e751b2df5a8416e2e', {"autocapture":{"elementInteractions":true}});</script>
   </head>
   <body>
     <div id="root"></div>
